<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">


    <View
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/rounded_background"
        app:layout_constraintBottom_toTopOf="@id/linhaDivisoria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/linhaDivisoria"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/blue_claro"
        app:layout_constraintBottom_toTopOf="@id/funcionario1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="IMPRESSÃO"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@id/menu"
        app:layout_constraintEnd_toEndOf="@id/menu"
        app:layout_constraintStart_toStartOf="@id/menu"
        app:layout_constraintTop_toTopOf="@id/menu" />

    <TextView
        android:id="@+id/funcionario1"
        style="@style/TextViewStyle"
        android:text="@string/funcionario_1"
        app:layout_constraintBottom_toTopOf="@id/funcionario2"
        app:layout_constraintTop_toBottomOf="@id/linhaDivisoria"
        android:layout_marginStart="3dp"/>

    <TextView
        android:id="@+id/funcionario2"
        style="@style/TextViewStyle"
        android:text="@string/funcionario_2"
        app:layout_constraintBottom_toTopOf="@id/funcionario3"
        app:layout_constraintTop_toBottomOf="@id/funcionario1"
        android:layout_marginStart="3dp"/>

    <TextView
        android:id="@+id/funcionario3"
        style="@style/TextViewStyle"
        android:text="@string/funcionario_3"
        app:layout_constraintBottom_toTopOf="@id/funcionario4"
        app:layout_constraintTop_toBottomOf="@id/funcionario2"
        android:layout_marginStart="3dp"/>

    <TextView
        android:id="@+id/funcionario4"
        style="@style/TextViewStyle"
        android:text="@string/funcionario_4"
        app:layout_constraintBottom_toTopOf="@id/funcionario5"
        app:layout_constraintTop_toBottomOf="@id/funcionario3"
        android:layout_marginStart="3dp"/>

    <TextView
        android:id="@+id/funcionario5"
        style="@style/TextViewStyle"
        android:text="@string/funcionario_5"
        app:layout_constraintBottom_toTopOf="@id/funcionario6"
        app:layout_constraintTop_toBottomOf="@id/funcionario4"
        android:layout_marginStart="3dp"/>

    <TextView
        android:id="@+id/funcionario6"
        style="@style/TextViewStyle"
        android:text="@string/funcionario_6"
        app:layout_constraintTop_toBottomOf="@id/funcionario5"
        android:layout_marginStart="3dp"/>


    <TextView
        android:id="@+id/produto1"
        style="@style/TextViewStyleProdutos"
        android:text="Produto1"
        app:layout_constraintBottom_toBottomOf="@id/funcionario1"
        app:layout_constraintStart_toEndOf="@id/funcionario1"
        app:layout_constraintTop_toTopOf="@id/funcionario1"
        android:layout_marginEnd="3dp"


        />

    <TextView
        android:id="@+id/produto2"
        style="@style/TextViewStyleProdutos"
        android:text="Produto2"
        app:layout_constraintBottom_toBottomOf="@id/funcionario2"
        app:layout_constraintStart_toEndOf="@id/funcionario2"
        app:layout_constraintTop_toTopOf="@id/funcionario2"
        android:layout_marginEnd="3dp"


        />

    <TextView
        android:id="@+id/produto3"
        style="@style/TextViewStyleProdutos"
        android:text="Produto3"
        app:layout_constraintBottom_toBottomOf="@id/funcionario3"
        app:layout_constraintStart_toEndOf="@id/funcionario3"
        app:layout_constraintTop_toTopOf="@id/funcionario3"
        android:layout_marginEnd="3dp"

        />

    <TextView
        android:id="@+id/produto4"
        style="@style/TextViewStyleProdutos"
        android:text="Produto4"
        app:layout_constraintBottom_toBottomOf="@id/funcionario4"
        app:layout_constraintStart_toEndOf="@id/funcionario4"
        app:layout_constraintTop_toTopOf="@id/funcionario4"
        android:layout_marginEnd="3dp"

        />

    <TextView
        android:id="@+id/produto5"
        style="@style/TextViewStyleProdutos"
        android:text="Produto5"
        app:layout_constraintBottom_toBottomOf="@id/funcionario5"
        app:layout_constraintStart_toEndOf="@id/funcionario5"
        app:layout_constraintTop_toTopOf="@id/funcionario5"
        android:layout_marginEnd="3dp"

        />

    <TextView
        android:id="@+id/produto6"
        style="@style/TextViewStyleProdutos"
        android:text="Produto6"
        app:layout_constraintBottom_toBottomOf="@id/funcionario6"
        app:layout_constraintStart_toEndOf="@id/funcionario6"
        app:layout_constraintTop_toTopOf="@id/funcionario6"
        android:layout_marginEnd="3dp"

        />

    <Button
        android:id="@+id/botao1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Clique"
        app:layout_constraintEnd_toStartOf="@id/produto6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/funcionario6" />

    <Button
        android:id="@+id/botao2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Clique"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/funcionario6"
        app:layout_constraintTop_toBottomOf="@id/produto6" />


</androidx.constraintlayout.widget.ConstraintLayout>